--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
             <a class="nav-link" href="index.html">/home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">/forensic</a>
+            <a class="nav-link" href="#">/forensic</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">/ctf</a>
+            <a class="nav-link" href="#">/ctf</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">/about</a>
           </li>
         </ul>
       </div>
@@ -66,7 +69,7 @@
   </header>
 
   <!-- Main Content -->
-  <div class="container" style="margin: 4%;">
+  <div id="main" class="container">
     <div class="row">
       <div class="sidebar">
         <div class="avatar">
@@ -168,7 +171,7 @@
             <li class="list-inline-item">    
             </li>
           </ul>
-          <p class="copyright text-muted">&copy; 9JYWONG9</p>
+          <p class="copyright text-muted">&copy; 9JYWONG9 </p>
         </div>
       </div>
     </div>
