--- a/about.html
+++ b/about.html
@@ -17,18 +17,19 @@
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
   <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
-
+  <link href="css/clean-blog.css" rel="stylesheet">
+  <!-- SVG logo -->
+  <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
+<body style="background-color: black;">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand" href="index.html">9JYWONG9</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -36,16 +37,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">/home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="#">/forensic</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="#">/ctf</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="about.html">/about</a>
           </li>
         </ul>
       </div>
@@ -53,14 +54,14 @@
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
-    <div class="overlay" ></div>
+  <header class="masthead" style="background-image: url(./img/0UW1yhc.gif);">
+    <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+          <div class="site-heading">
+            <h1>9JYWONG9</h1>
+            <span class="subheading"></span>
           </div>
         </div>
       </div>
@@ -70,7 +71,37 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="sidebar">
+        <div class="avatar">
+          <img src="img/dohacker.jpg">
+        </div>
+        <h4 class="myname">9JYWONG9</h4>
+        <p class="intro">Passionate in CTF and forensic</p>
+          <div class="wrapper">
+            <ul class="description">
+              <li>
+                <i class='fas fa-map-pin' style="font-size: 20px; padding-left: 5px;"></i>
+                <span>Kuala Lumpur, Malaysia</span>
+              </li>
+              <li>
+                <i class="fa fa-linkedin-square" style="font-size: 20px;"></i>
+                <a href="#">LinkIn</a>
+              </li>
+              <li>
+                <i class="fa fa-github" style="font-size: 20px;"></i>
+                <a href="#">GitHub</a>
+              </li>
+              <li>
+                <i class="fa fa-envelope" style="font-size: 18px;"></i>
+                <a href="#">Mail</a>
+              </li>
+            </ul>
+        </div>
+      </div>
+      <div class="col-lg-9 col-md-10 mx-auto">
+        <header><h1>About Me</h1></header>
+        <p>Hi there, this is my blog for research result and knowledge base.<br>
+          I was born in 1999, I have a great interest in CTF and foresnic skills. Although, there nothing much </p>
       </div>
     </div>
   </div>
@@ -83,32 +114,14 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+            <li class="list-inline-item">   
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
             </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
+            <li class="list-inline-item">    
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+          <p class="copyright text-muted">&copy; 9JYWONG9 </p>
         </div>
       </div>
     </div>
