--- a/about.html
+++ b/about.html
@@ -100,8 +100,10 @@
       </div>
       <div class="col-lg-9 col-md-10 mx-auto">
         <header><h1>About Me</h1></header>
-        <p>Hi there, this is my blog for research result and knowledge base.<br>
-          I was born in 1999, I have a great interest in CTF and foresnic skills. Although, there nothing much </p>
+        <p>Hi there, this is my blog for research result and knowledge base.<br> Currently intern in a cybersecurity solution company<br> 
+         </p>
+         <p>I was born in 1999, I have a great interest in CTF and foresnic skills as I like to investigate and analyze case. 
+          Although, there is nothing much yet in this website. But I will continue update any interest case or scenario as much as possible.</p>
       </div>
     </div>
   </div>
